recursion.lessons.recursion.koch.SquareKoch.scala.error
SquareKoch:19: error: ')' expected but ';' found.
		squareSide(levels-1;length/3)
                                   ^SquareKoch:19: error: ';' expected but ')' found.
		squareSide(levels-1;length/3)
                                            ^SquareKoch:21: error: ';' expected but ')' found.
		squareSide(levels-1;length/3)
                                            ^SquareKoch:23: error: ';' expected but ')' found.
		squareSide(levels-1;length/3)
                                            ^SquareKoch:25: error: ';' expected but ')' found.
		squareSide(levels-1;length/3)
                                            ^SquareKoch:27: error: ';' expected but ')' found.
		squareSide(levels-1;length/3)
                                            ^